--- a/tanstack-query-normy/index.html
+++ b/tanstack-query-normy/index.html
@@ -5,6 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <title>Trellix Offline | tanstack-query-normy</title>
+
+    <script
+      defer
+      src="https://umami-production-a483.up.railway.app/script.js"
+      data-website-id="6be73121-a3ea-4338-9d4e-5773fcd4aa56"
+    ></script>
+
+    <script
+      defer
+      data-domain="trellix-tanstack-query-normy.up.railway.app"
+      src="https://plausible-analytics-ce-production-75dd.up.railway.app/js/script.js"
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
