--- a/signaldb/index.html
+++ b/signaldb/index.html
@@ -5,6 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <title>Trellix Offline | signaldb</title>
+
+    <script
+      defer
+      src="https://umami-production-a483.up.railway.app/script.js"
+      data-website-id="e903ea59-8ab4-413b-8070-e34721fc619e"
+    ></script>
+
+    <script
+      defer
+      data-domain="trellix-signaldb.up.railway.app"
+      src="https://plausible-analytics-ce-production-75dd.up.railway.app/js/script.js"
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
