--- a/tanstack-query/index.html
+++ b/tanstack-query/index.html
@@ -5,6 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <title>Trellix Offline | tanstack-query</title>
+
+    <script
+      defer
+      src="https://umami-production-a483.up.railway.app/script.js"
+      data-website-id="e9b23328-7cf9-441c-81be-779a664a04d5"
+    ></script>
+
+    <script
+      defer
+      data-domain="trellix-tanstack-query.up.railway.app"
+      src="https://plausible-analytics-ce-production-75dd.up.railway.app/js/script.js"
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
