enable umami analytics only in production

--- a/tanstack-query-normy/index.html
+++ b/tanstack-query-normy/index.html
@@ -8,6 +8,7 @@
 
     <script
       defer
+      data-domains="trellix-tanstack-query-normy.up.railway.app"
       src="https://umami-production-a483.up.railway.app/script.js"
       data-website-id="6be73121-a3ea-4338-9d4e-5773fcd4aa56"
     ></script>
