--- a/tanstack-query/index.html
+++ b/tanstack-query/index.html
@@ -8,6 +8,7 @@
 
     <script
       defer
+      data-domains="trellix-tanstack-query.up.railway.app"
       src="https://umami-production-a483.up.railway.app/script.js"
       data-website-id="e9b23328-7cf9-441c-81be-779a664a04d5"
     ></script>
