--- a/replicache/index.html
+++ b/replicache/index.html
@@ -8,6 +8,7 @@
 
     <script
       defer
+      data-domains="trellix-replicache.up.railway.app"
       src="https://umami-production-a483.up.railway.app/script.js"
       data-website-id="479190da-a853-4ef4-90c4-7d9093775f30"
     ></script>
