--- a/signaldb/index.html
+++ b/signaldb/index.html
@@ -8,6 +8,7 @@
 
     <script
       defer
+      data-domains="trellix-signaldb.up.railway.app"
       src="https://umami-production-a483.up.railway.app/script.js"
       data-website-id="e903ea59-8ab4-413b-8070-e34721fc619e"
     ></script>
